--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pixis",
-  "version": "First Pixel",
+  "version": "2.0.0",
   "description": "Advanced File Downloader",
   "main": "main.js",
   "scripts": {
-    "test": "node test.js"
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
